<resources>
    <string name="app_name">Anime</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_AnimeList" >AnimeList</string>
    <string name="title_Episode">Episode</string>
    <string name="title_Search" >Search</string>

    <!--App Message-->
    <string name="some_error" >Some Error Occurred!</string>
    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close" >Close navigation drawer</string>

    <string name="action_settings" >Settings</string>
    <string name="animelist">AnimeList</string>
    <string name="episodes">Episodes</string>
    <string name="search">Search</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="release_date">Release Date</string>
    <string name="overview">OverView</string>
    <string name="run_time">Run Time</string>
    <string name="title">Title</string>
    <string name="vote_count">Vote Count</string>
    <string name="over_view">Over View</string>
    <string name="movie_id">Movie ID</string>
    <string name="name">Name</string>
    <string name="original_language">Original Language</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="animename">AnimeName</string>
</resources>
